# RoboMaster-2022

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  build.sh  run.sh  xmake.lua
src/capture/: BaseCapture.hpp  CMakeLists.txt  DahengCapture.cpp  DahengCapture.hpp  DahuaCapture.cpp  DahuaCapture.hpp  ImageCapture.cpp  ImageCapture.hpp  VideoCapture.cpp  VideoCapture.hpp  base.hpp  base_capture.hpp  capture.hpp  daheng.cpp  daheng.hpp  daheng_capture.cpp  daheng_capture.hpp  dahua_capture.cpp  dahua_capture.hpp  image.cpp  image.hpp  image_capture.cpp  image_capture.hpp  video.cpp  video.hpp  video_capture.cpp  video_capture.hpp
src/capture/src/: daheng_capture.cpp  dahua_capture.cpp  image_capture.cpp  video_capture.cpp
src/common/: CMakeLists.txt  game_data.hpp
src/communicate/: CMakeLists.txt  Cmd.c  Cmd.h  Cmd.hpp  Serial.cpp  Serial.hpp  Vofa.cpp  Vofa.hpp  cmd.c  cmd.h  cmd.hpp  communicate.cpp  communicate.hpp  serial.cpp  serial.hpp  vofa.cpp  vofa.hpp
src/communicate/src/: cmd.c  serial.cpp  vofa.cpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/config/src/: config.cpp
src/detect/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  CvArmorDetector.cpp  CvArmorDetector.hpp  Detector.hpp  HammingMatch.cpp  HammingMatch.hpp  LkOpticalFlowTracker.cpp  LkOpticalFlowTracker.hpp  MatchsClassifier.cpp  MatchsClassifier.hpp  Model.cpp  Model.hpp  NnArmorDetector.cpp  NnArmorDetector.hpp  bounding_box.cpp  bounding_box.hpp  cv_armor.cpp  cv_armor.hpp  cv_armor_detector.cpp  cv_armor_detector.hpp  cv_armor_util.cpp  cv_armor_util.hpp  cv_util.cpp  cv_util.hpp  detect.hpp  hamming_match.cpp  hamming_match.hpp  lk_optical_flow_tracker.cpp  lk_optical_flow_tracker.hpp  matchs_classifier.cpp  matchs_classifier.hpp  model.hpp  nn_armor_detector.cpp  nn_armor_detector.hpp
src/detect/openvino/: VinoModel.hpp  VinoModelNanodet.cpp  VinoModelSjtu.cpp  VinoModelYolox.cpp  vino_model.hpp  vino_model_nanodet.cpp  vino_model_sjtu.cpp  vino_model_yolox.cpp  vino_util.cpp  vino_util.hpp
src/detect/openvino_sjtu/: VinoModel.cpp  VinoModel.hpp  vino_model.cpp  vino_model.hpp
src/detect/src/: armor_icon_classifier.cpp  armor_icon_classifier.hpp  collections.cpp  cv_armor_detector.cpp  cv_armor_util.cpp  cv_util.cpp  hamming_match.cpp  lk_optical_flow_tracker.cpp  matchs_classifier.cpp  nn_armor_detector.cpp  ocv_armor_detector.cpp  ocv_power_rune_detector.cpp  ocv_utils.hpp
src/detect/tensorrt_sjtu/: TRTErrorRecorder.h  TRTLogger.cpp  TRTLogger.h  TRTModule.cpp  TRTModule.hpp  trtlogger.h  trtmodule.hpp
src/filter/: AdaptiveEKF.hpp  CMakeLists.txt  DynamicLowpassFilter.hpp  KalmanFilter.hpp  MovingAverageFilter.hpp  adaptive_ekf.hpp  dynamic_lowpass_filter.hpp  filter.hpp  kalman_filter.hpp  moving_average_filter.hpp
src/filter/spec/: UlmXyzKf.cpp  UlmXyzKf.hpp  ulm_xyz_kf.cpp  ulm_xyz_kf.hpp
src/logging/: CMakeLists.txt  logging.hpp
src/nerv/: CMakeLists.txt
src/nerv/src/: nerv.cpp
src/predict/: AdaptiveEKF.hpp  Aimer.cpp  Aimer.hpp  CMakeLists.txt  PnpSolver.cpp  PnpSolver.hpp  README.md  UniformLinearMotion.hpp  UniformLinearMotionR.hpp  aimer.cpp  aimer.hpp  pnp_solver.cpp  pnp_solver.hpp  predict.hpp  strategy.cpp  strategy.hpp
src/predict/src/: aimer.cpp  pnp_solver.cpp
src/rm_autoaim/: CMakeLists.txt  package.xml
src/rm_autoaim/autoaim_controller/: CMakeLists.txt  package.xml
src/rm_autoaim/autoaim_detector/: CMakeLists.txt  package.xml
src/rm_autoaim/autoaim_interfaces/: CMakeLists.txt  package.xml
src/rm_autoaim/autoaim_predictor/: CMakeLists.txt  package.xml
src/rm_autoaim/rm_autoaim/: CMakeLists.txt  package.xml
src/rm_autoaim/src/: capture_node.cpp  detect_node.cpp  interfaces.hpp  predict_node.cpp
src/rm_bringup/: CMakeLists.txt  package.xml
src/rm_bringup/launch/: armor_detect.launch.py  armor_detect_no_intra.launch.py
src/rm_bringup/params/: armor_detect.yaml
src/rm_bringup/src/: camera_node.cpp  config.hpp  legacy_control.cpp  radar.cpp
src/rm_camera/: CMakeLists.txt  package.xml
src/rm_camera/launch/: dahua_camera_node.launch.py  videocapture_node.launch.py
src/rm_camera/params/: dahua_camera_node.yaml  videocapture_node.yaml
src/rm_camera/src/: daheng_camera_node.cpp  dahua_camera_node.cpp  videocapture_node.cpp
src/rm_capture/: CMakeLists.txt  package.xml
src/rm_capture/src/: camera_node.cpp  capture_node.cpp  daheng_camera.cpp  daheng_camera.hpp  daheng_capture.cpp  dahua_camera.cpp  dahua_camera.hpp  dahua_capture.cpp  image_capture.cpp  video_capture.cpp  video_capture_node.cpp
src/rm_common/: CMakeLists.txt  package.xml
src/rm_common/src/: image_msg.cpp  rm_common.cpp
src/rm_detect/: CMakeLists.txt  package.xml
src/rm_detect/src/: cv_armor_detector.cpp  cv_armor_util.cpp  cv_util.cpp  detect_node.cpp  hamming_match.cpp  lk_optical_flow_tracker.cpp  matchs_classifier.cpp  nn_armor_detector.cpp
src/rm_interfaces/: CMakeLists.txt  package.xml
src/rm_interfaces/msg/: Angle3.msg  BoundingBox.msg  BoundingBoxesWithImageSize.msg  CmdToEc.msg
src/rm_serial/: CMakeLists.txt  package.xml
src/rm_serial/launch/: serial_node.launch.py
src/rm_serial/params/: serial_node.yaml
src/rm_serial/src/: cmd.c  cmd.cpp  cmd.h  cmd.hpp  serial_node.cpp  serial_port.hpp  serial_port_native.cpp  serial_port_native.hpp
src/tool/calibrate/: CMakeLists.txt  README.md  calibrate.cpp  capture_camera.cpp
src/util/: CMakeLists.txt  FpsCounter.cpp  FpsCounter.hpp  MovingAverageFilter.cpp  MovingAverageFilter.hpp  fps_counter.cpp  fps_counter.hpp  util.hpp
src/web/: CMakeLists.txt  web.cpp  web.hpp
src/work_thread/: BaseThread.hpp  CMakeLists.txt  CaptureThread.cpp  CaptureThread.hpp  CommunicateThread.cpp  CommunicateThread.hpp  DetectThread.cpp  DetectThread.hpp  StrategyThread.cpp  StrategyThread.hpp  base_thread.hpp  capture_thread.cpp  capture_thread.hpp  communicate_thread.cpp  communicate_thread.hpp  detect_thread.cpp  detect_thread.hpp  strategy_thread.cpp  strategy_thread.hpp  work_thread.hpp
src/work_thread/src/: capture_thread.cpp  communicate_thread.cpp  ulm_xyz_kf.cpp  (+2 more)
(+246 files in other folders)
